Data bootstrapped new choicelist